<resources>
    <string name="app_name">OrderFood</string>
    <string name="welcome">WELCOME</string>
    <string name="email">Email</string>
    <string name="password">Mật Khẩu</string>
    <string name="login">Đăng Nhập</string>
    <string name="forgotpassword">Quên Mật Khẩu ?</string>
    <string name="forgotpass">Quên Mật Khẩu</string>
    <string name="nonAccount">Bạn Chưa Có Tài Khoản ?</string>
    <string name="exit_app">Nhấn trở về lần nữa để thoát</string>
    <string name="createAcc">Tạo Tài Khoản</string>
    <string name="userName">Họ Và Tên</string>
    <string name="numberPhone">Số Điện Thoại</string>
    <string name="signUp">Đăng Ký</string>
    <string name="signUpDone">Đăng Ký Thành Công</string>
    <string name="AccExists">Tài Khoản Đã Tồn Tại</string>
    <string name="Empty">Không Được Để Trống Dữ Liệu</string>
    <string name="AccountErro">Sai Tài Khoản Hoặc Mật Khẩu</string>
    <string name="LoginComplete">Đăng Nhập Thành Công</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textforget">Vui Lòng Nhập Số Điện Thoại Đã Đăng Ký</string>
    <string name="textforget2">Mã OTP Sẽ Gửi Về Cho Bạn</string>
    <string name="Send">Gửi</string>
    <string name="phoneEmpty">Số Điện Thoại Chưa Được Đăng Ký</string>
    <string name="menu">Menu</string>
    <string name="all">Tất Cả</string>
    <string name="drink">Đồ Uống</string>
    <string name="Grilled">Nướng</string>
    <string name="HotPot">Lẩu</string>
    <string name="Appetizer">Khai Vị</string>
    <string name="erroPhone">Lỗi Xác Thực</string>
    <string name="pleaseWait">Vui Lòng Chờ</string>
    <string name="pleaseWait2">Đang Xác Thực Số Điện Thoại</string>
    <string name="otp_authentication">Xác Thực OTP</string>
    <string name="otp_text">Vui Lòng Nhập Mã OTP 6 Chữ Số</string>
    <string name="otp_text2">Bạn Vừa Nhận Được</string>
    <string name="authen">Xác Nhận</string>
    <string name="authen2">Đang Xác Thực OTP</string>
    <string name="exitOTP">Hủy Xác Thực OTP</string>
    <string name="messOTP">Bạn Có Muốn Hủy Xác Thực OTP</string>
    <string name="alertOTP">OTP phải là 6 chữ số !!!</string>
    <string name="OTP_number">Mã OTP</string>
    <string name="changePass">Đổi Mật Khẩu</string>
    <string name="newPass">Mật Khẩu Mới</string>
    <string name="cancelPass">Hủy Thao Tác</string>
    <string name="cancelNewPass">Bạn Có Muốn Hủy Bỏ Thao Tác Này ?</string>
    <string name="newPassOK">Thay Đổi Mật Khẩu Thành Công</string>
    <string name="newPassErro">Lỗi. Vui Lòng Thử Lại</string>
    <string name="day">Ngày</string>
    <string name="hour">Giờ</string>
    <string name="order">Đặt</string>
    <string name="minCount">Số Lượng Sản Phẩm Tối Thiểu Là 1</string>
    <string name="addish">Thêm Thành Công</string>
    <string name="emptyListOrder">Giỏ Hàng Trống</string>
</resources>