<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:onClick="noClick"
    tools:context=".fragments.SignUp_Fragment"
    tools:ignore="OnClick">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_otp_authen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/otp_authentication"
            android:textColor="#333333"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_text"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="#403D3D"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_text2"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="#403D3D"/>

        <EditText
            android:id="@+id/edt_otp_authen_login"
            android:maxLength="6"
            android:gravity="center"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_55sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_55sdp"
            android:background="@drawable/custom_otp_authen"
            android:hint="@string/OTP_number"
            android:paddingLeft="@dimen/_8sdp"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/btn_authenOTP_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/custom_click_login"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/authen"
            android:textColor="#fff"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_authenOTP"
        android:background="#FFFFFF"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100" />
        <TextView
            android:textColor="#03A9F4"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pleaseWait"/>
        <TextView
            android:textColor="#03A9F4"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authen2"/>
    </LinearLayout>
    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_signUp_authen"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>