<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:onClick="noClick"
    tools:context=".fragments.SignUp_Fragment"
    tools:ignore="OnClick">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgotpass"
            android:textColor="#333333"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />


        <EditText
            android:inputType="number"
            android:id="@+id/edt_numberPhone_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_42sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/custom_editext_login"
            android:hint="@string/numberPhone"
            android:paddingLeft="@dimen/_8sdp"
            android:textSize="@dimen/_18sdp"
            tools:text="0975414741" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textforget"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="#403D3D"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textforget2"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="#403D3D"/>

        <TextView
            android:id="@+id/btn_sendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/custom_click_login"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/Send"
            android:textColor="#fff"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_forget"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>