<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:onClick="noClick"
    tools:ignore="OnClick">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/newPass"
            android:textColor="#333333"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />


        <EditText
            android:inputType="textPassword"
            android:id="@+id/edt_newPass"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/custom_editext_login"
            android:hint="@string/newPass"
            android:paddingLeft="@dimen/_8sdp"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/btn_newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/custom_click_login"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/authen"
            android:textColor="#fff"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_newPass"
        android:background="#FFFFFF"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100" />
        <TextView
            android:textColor="#03A9F4"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pleaseWait"/>
    </LinearLayout>

</FrameLayout>